# tonys-tcc

./: README.md
samantha/: .gitignore  CLAUDE.md  README.md  pyproject.toml
samantha/docs/superpowers/specs/: 2026-06-20-samantha-loop-design.md
samantha/samantha/: brain.py  cli.py  config.py  estimator.py  goal.py  hud.py  memory.py  personality.py  secrets.py  ui.py  voice.py
samantha/samantha/tts/: __init__.py  elevenlabs_backend.py  miso_backend.py
samantha/tests/: test_estimator.py  test_goal.py  test_hud.py  test_memory.py  test_secrets.py  test_tts.py
